# mkhtml

./: CMakeLists.txt  Doxyfile  INSTALL.sh  README.md  mallocErrorMessage.c
.github/workflows/: static.yml
app/: CMakeLists.txt  main.c
cssgenerators/: cartoon_mkstyle.txt  elegant_mkstyle.txt  hacker_mkstyle.txt  simple_mkstyle.txt  unix_mkstyle.txt  violenta_mkstyle.txt
docs/html/: annotated.html  classes.html  dir_000001_000002.html  dir_000001_000003.html  dir_000002_000001.html  dir_000002_000003.html  dir_000002_000004.html  dir_000003_000002.html  dir_000003_000004.html  dir_0a6c4ef7764980e58ad3a5651c1bbe7b.html  dir_17ca411e5d4f08fdd4a3f6bce80f00e6.html  files.html  (+28 more)
man/: mkhtml.1
src/: CMakeLists.txt  doxygenindex.txt
src/app/: CMakeLists.txt  mkhtml.c
src/mkgen/: CMakeLists.txt  addcss.c  apiKeyMenu.c  argVerify.c  badArgcMessage.c  confInteractionErrorMessage.c  cssVerify.c  curlErrorMessage.c  fileReadErrorMessage.c  githubMenu.c  helpMenu.c  htmlFileInitErrorMessage.c  htmlGen.c  jsonFileCreationErrorMessage.c  jsonReadErrorMessage.c  mkSettingsMenu.c  mkgen.h  noApiKeyMessage.c  secondArgumentMissingMessage.c  settingsDataReader.c  structureVerify.c  takeFileChar.c  verify.c  verifyArgcError.c  verifyFileStructureError.c  versionMenu.c  webMenu.c  wrongArgumentsMessage.c
src/mkgenmessages/: CMakeLists.txt  apiKeyControlUnsuccessfulMessage.c  confInteractionErrorMessage.c  htmlFileInitErrorMessage.c  jsonFileCreationErrorMessage.c  jsonReadErrorMessage.c  mallocErrorMessage.c  mkgenmessages.h  wrongArgumentsMessage.c  wrongCssErrorMessage.c
(+542 files in other folders)
