add_library(mkgen STATIC argVerify.c htmlGen.c wrongArgumentsMessage.c secondArgumentMissingMessage.c badArgcMessage.c structureVerify.c verifyFileStructureError.c jsonFileCreationErrorMessage.c confInteractionErrorMessage.c curlErrorMessage.c jsonReadErrorMessage.c htmlFileInitErrorMessage.c noApiKeyMessage.c)