add_library(mkgenmessages STATIC badArgcMessage.c confInteractionErrorMessage.c curlErrorMessage.c fileReadErrorMessage.c htmlFileInitErrorMessage.c jsonFileCreationErrorMessage.c jsonReadErrorMessage.c noApiKeyMessage.c secondArgumentMissingMessage.c verifyFileStructureError.c wrongArgumentsMessage.c)